Карусель в блоке с уведомлениями

--- a/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница — педагоги.html
@@ -374,14 +374,40 @@
         <div class="non-scheduled-notification  uk-position-fixed uk-position-bottom-center uk-alert">
             <div class="h4 uk-padding-remove">У вас есть активные контракты без запланированных занятий:
             </div>
-            <div class="scheduled-notification_item uk-grid-match uk-child-width-expand@s" uk-grid>
-                <div class="">
-                    <div class="h5 textcolor18 uk-padding-remove">Тестовый ученик 3
+            <div class="uk-position-relative uk-visible-toggle" tabindex="-1" uk-slideshow="autoplay: true">
+                <div class="uk-slideshow-items">
+                    <div class="scheduled-notification_item uk-grid-match uk-child-width-expand@s" uk-grid>
+                        <div class="">
+                            <div class="h5 textcolor18 uk-padding-remove">Тестовый ученик 3
+                            </div>
+                        </div>
+                        <div class="uk-padding-remove uk-margin-remove">
+                            <a href="" class="back-to-site-lk uk-width-1-1 uk-margin-remove uk-height-1-1">Назначить занятие</a>
+                        </div>
+                    </div>
+                    <div class="scheduled-notification_item uk-grid-match uk-child-width-expand@s" uk-grid>
+                        <div class="">
+                            <div class="h5 textcolor18 uk-padding-remove">Тестовый ученик 3 Тестовый ученик 3 Тестовый ученик 3
+                            </div>
+                        </div>
+                        <div class="uk-padding-remove uk-margin-remove">
+                            <a href="" class="back-to-site-lk uk-width-1-1 uk-margin-remove uk-height-1-1">Назначить занятие</a>
+                        </div>
+                    </div>
+                    <div class="scheduled-notification_item uk-grid-match uk-child-width-expand@s" uk-grid>
+                        <div class="">
+                            <div class="h5 textcolor18 uk-padding-remove">Тестовый ученик 3
+                            </div>
+                        </div>
+                        <div class="uk-padding-remove uk-margin-remove">
+                            <a href="" class="back-to-site-lk uk-width-1-1 uk-margin-remove uk-height-1-1">Назначить занятие</a>
+                        </div>
                     </div>
                 </div>
-                <div class="uk-padding-remove uk-margin-remove">
-                    <a href="" class="back-to-site-lk uk-width-1-1 uk-margin-remove uk-height-1-1">Назначить занятие</a>
-                </div>
+               
+                    <a class="uk-position-center-left" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
+                    <a class="uk-position-center-right" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
+                
             </div>
         </div>
     </div>
