Иконка для новостей для десктопа

--- a/шаблон — личный кабинет — лента новостей.html
+++ b/шаблон — личный кабинет — лента новостей.html
@@ -60,6 +60,11 @@
                     <img class="" src="https://cdn.nyutonika.ru/icons-lk/package-lk2.svg"><span>Пакеты занятий</span>
                 </a>
             </li>
+            <li>
+                <a  href="https://olgabindasova.github.io/nytonika/шаблон — личный кабинет — лента новостей.html">
+                    <div class="lk-news-icons">2</div><img src="https://cdn.nyutonika.ru/icons-lk/news-lk2.svg"><span>Новости</span>
+                </a>
+            </li>
         </ul>
         <div class="aside-lk_all_contact">
             <div>
