--- a/шаблон — личный кабинет — лента новостей.html
+++ b/шаблон — личный кабинет — лента новостей.html
@@ -131,6 +131,12 @@
                             <li class="nav-item"><a href="#">Последние занятия</a></li>
                             <li class="nav-item"><a href="#">Пакеты занятий</a></li>
                             <li class="nav-item"><a href="#">История заказов</a></li>
+                            <li class="nav-item">
+                                <a  href="#">
+                                    <div class="lk-news-icons">2</div>
+                                    Новости
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
