--- a/index — копия.html
+++ b/index — копия.html
@@ -863,12 +863,12 @@
                             на 8 занятий</div>
                         <div class="pricing-item_one color3">
                             <div><span>790</span>руб.</div>
-                            <div class="pricing-item_one_old"><span>1000</span>руб.</div>
+                            <div class="pricing-item_one_old"><span>1000&nbsp;</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
                             Стоимость 6320 руб.
-                            <div class="pricing-item_one_old"><span>8000</span>руб.</div>
+                            <div class="pricing-item_one_old"><span>8000&nbsp;</span>руб.</div>
                             <span>Хватит<br>на месяц - полтора</span>
                         </div>
                         <div class="pricing-item_button">
