Кнопка и верх страницы для результата опросника

--- a/шаблон — тестовый опросник — результаты.html
+++ b/шаблон — тестовый опросник — результаты.html
@@ -31,43 +31,83 @@
             </section>
 
             <section class="container-item">
-                <h1 class="h2 uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Результаты опроса</h1>
-                
+                <nav class="uk-flex uk-flex-between uk-padding-small uk-flex-row@s
+                uk-flex-column uk-grid-small uk-flex-bottom" uk-grid>
+                    <div class="">
+                        <a href="/">
+                            <img src="https://cdn.nyutonika.ru/svg/logo.svg">
+                        </a>
+                    </div>
+                    <div class="footer-content_item_info">
+                        <p class="footer-content_item-title">Телефон:</p>
+                        <p class="footer-phone uk-padding-remove">
+                            <a href="tel:+78003336171">8-800-333-61-71</a>
+                        </p>
+                    </div>
+
+
+                    <div class="footer-content_item_info">
+                        <p class="footer-content_item-title">Почта:</p>
+                        <p class="footer-phone uk-padding-remove"><a
+                                href="mailto:info@nyutonika.ru">info@nyutonika.ru</a></p>
+                    </div>
+                </nav>
+                <hr class="bordercolor13">
+                <h1 class="h2 uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Результаты
+                    опроса</h1>
+
                 <div class="intern-office color27 uk-margin">
-                        <div class="h4 uk-padding-remove">Вопрос 1</div>
-                        <div class="intern-office_information-comments">
-                            <ul class="intern-office_list intern-office_list-2">
-                                <li>Ответ 
-                                </li>
-                            </ul>
-                        </div>
+                    <div class="h4 uk-padding-remove">Вопрос 1</div>
+                    <div class="intern-office_information-comments">
+                        <ul class="intern-office_list intern-office_list-2">
+                            <li>Ответ
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="intern-office color27 uk-margin">
                     <div class="h4 uk-padding-remove">Вопрос 2</div>
                     <div class="intern-office_information-comments">
                         <ul class="intern-office_list intern-office_list-2">
-                            <li>Ответ 
+                            <li>Ответ
                             </li>
-                            <li>Ответ 
+                            <li>Ответ
                             </li>
                         </ul>
                     </div>
-            </div>
-            <div class="uk-width-expand uk-width-large@s">
-                <a class="uk-button uk-button-large button-tree uk-width-expand">Вернуться в личный кабинет</a>
-            </div>
+                </div>
+
+                <div class="uk-width-expand uk-width-large@s">
+                    <a class="uk-button uk-button-large button-tree uk-width-expand">Вернуться в личный кабинет</a>
+                </div>
+
             </section>
-            
+
+            <div class="banner-trend-dop uk-grid" style="z-index: -1;position: relative; height: 0;" uk-grid="">
+                <img class="banner-trend-dop_img-nachsc-aplle2" src="https://cdn.nyutonika.ru/svg/уроки круги.svg"
+                    style="bottom: 270px; left: 70%; " alt="">
+                <img class="banner-trend-dop_img-nachsc-aplle3 uk-first-column"
+                    style="width: 320px;top: -120px;left: 15%;"
+                    src="https://cdn.nyutonika.ru/svg/яблоко-сршк-занятия1.svg" alt="">
+            </div>
 
         </main>
+        <div class="container main  uk-width-expand">
+            <nav class="header-nav uk-navbar container-item uk-margin-remove" style="position: relative;top:-50px;">
+                <button href="https://nyutonika.ru/login" class="uk-button uk-button-primary button-two">
+                    Скачать результат опроса в формате PDF
+                </button>
+            </nav>
+        </div>
+
         <footer class="">
             <div class="container">
-
                 <a href="#" class="scrollup">Наверх</a>
             </div>
         </footer>
 
     </div>
+
     <script src="https://cdn.nyutonika.ru/js/jquery.maskedinput-1.4.1.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
