Картинка на главной с акцией

--- a/index — копия.html
+++ b/index — копия.html
@@ -835,7 +835,7 @@
         </section>
         <!-- Ценники-->
         <section class="container-item">
-            <h2 class="uk-text-center">Классные цены</h2>
+            <h2 class="uk-text-center">Нормальные цены</h2>
             <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small"
                 uk-grid>
                 <div class="reviews-pricing-item price-disclosure"
@@ -849,66 +849,33 @@
                 </div>
                 <div class="reviews-pricing-item price-disclosure"
                     uk-scrollspy="cls: uk-animation-slide-top; delay: 800">
-                    <div class="pricing-item bordercolor5">
+                    <div class="pricing-item bordercolor1">
 
-                        <div class="pricing-item_icon bordercolor5"><img
-                                src="https://cdn.nyutonika.ru/icons/прайс-1-1новый.svg" alt="">
+                        <div class="pricing-item_icon bordercolor1"><img
+                                src="https://cdn.nyutonika.ru/icons/прайс-1.svg" alt="">
                         </div>
-                        <ul class="pricing-header_top pricing-header_top_hit pricing-header_top_hit2">
+                        <ul class="pricing-header_top pricing-header_top_hit">
                             <li>
-                                Первый
+                                Популярный
                             </li>
                         </ul>
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 8 занятий</div>
-                        <div class="pricing-item_one color3">
+                        <div class="pricing-item_one color10">
                             <div><span>790</span>руб.</div>
-                            <div class="pricing-item_one_old"><span>1000&nbsp;</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
                             Стоимость 6320 руб.
-                            <div class="pricing-item_one_old"><span>8000&nbsp;</span>руб.</div>
                             <span>Хватит<br>на месяц - полтора</span>
                         </div>
                         <div class="pricing-item_button">
-                            <a href="" class="uk-button uk-button-primary button-tree button-color-5">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-1">
                                 Начать бесплатно</a>
                         </div>
 
                     </div>
                 </div>
-                <!--
-                <div class="reviews-pricing-item price-disclosure"
-                uk-scrollspy="cls: uk-animation-slide-top; delay: 800">
-                <div class="pricing-item bordercolor1">
-
-                    <div class="pricing-item_icon bordercolor1"><img
-                            src="https://cdn.nyutonika.ru/icons/прайс-1.svg" alt="">
-                    </div>
-                    <ul class="pricing-header_top pricing-header_top_hit">
-                        <li>
-                            Популярный
-                        </li>
-                    </ul>
-                    <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
-                        на 8 занятий</div>
-                    <div class="pricing-item_one color10">
-                        <div><span>1010</span>руб.</div>
-                        <div>за одно занятие</div>
-                    </div>
-                    <div class="pricing-item_set pricing-item_set_hit">
-                        Стоимость 8080 руб.
-                        <span>Хватит<br>на месяц - полтора</span>
-                    </div>
-                    <div class="pricing-item_button">
-                        <a href="" class="uk-button uk-button-primary button-tree button-color-1">
-                            Начать бесплатно</a>
-                    </div>
-
-                </div>
-                </div>
-                -->
                 <div class="reviews-pricing-item price-disclosure"
                     uk-scrollspy="cls: uk-animation-slide-top; delay: 1200">
                     <div class="pricing-item bordercolor2">
@@ -924,11 +891,11 @@
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 64 занятия</div>
                         <div class="pricing-item_one color20">
-                            <div><span>905</span>руб.</div>
+                            <div><span>690</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 57920 руб.
+                            Стоимость 44160 руб.
                             <span>Хватит<br>примерно на год</span>
                         </div>
                         <div class="pricing-item_button">
@@ -953,7 +920,7 @@
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 1 занятие</div>
                         <div class="pricing-item_one color11">
-                            <div><span>1190</span>руб.</div>
+                            <div><span>990</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
@@ -984,11 +951,11 @@
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 4 занятия</div>
                         <div class="pricing-item_one color21">
-                            <div><span>1070</span>руб.</div>
+                            <div><span>890</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 4280 руб.
+                            Стоимость 3560 руб.
                             <span>Хватит<br>на две-три недели</span>
                         </div>
                         <div class="pricing-item_button">
@@ -999,10 +966,10 @@
                     </div>
                 </div>
                 <div class="reviews-pricing-item price-disclosure">
-                    <div class="pricing-item bordercolor11">
+                    <div class="pricing-item bordercolor5">
 
-                        <div class="pricing-item_icon bordercolor11"><img class="right"
-                                src="https://cdn.nyutonika.ru/icons/прайс-11-1.svg" alt="">
+                        <div class="pricing-item_icon bordercolor5"><img class="right"
+                                src="https://cdn.nyutonika.ru/icons/прайс-5.svg" alt="">
                         </div>
                         <ul class="pricing-header_top  pricing-header_top_normal">
                             <li>
@@ -1011,16 +978,16 @@
                         </ul>
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 16 занятий</div>
-                        <div class="pricing-item_one color25">
-                            <div><span>980</span>руб.</div>
+                        <div class="pricing-item_one color3">
+                            <div><span>750</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 15680 руб.
+                            Стоимость 12000 руб.
                             <span>Хватит<br>на два-три месяца</span>
                         </div>
                         <div class="pricing-item_button">
-                            <a href="" class="uk-button uk-button-primary button-tree button-color-11">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-5">
                                 Начать бесплатно</a>
                         </div>
 
@@ -1040,11 +1007,11 @@
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 32 занятия</div>
                         <div class="pricing-item_one color5">
-                            <div><span>950</span>руб.</div>
+                            <div><span>730</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 30400 руб.
+                            Стоимость 23360 руб.
                             <span>Хватит<br>на четыре-пять месяцев</span>
                         </div>
                         <div class="pricing-item_button">
@@ -1068,11 +1035,11 @@
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 48 занятий</div>
                         <div class="pricing-item_one color4">
-                            <div><span>930</span>руб.</div>
+                            <div><span>710</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 44640 руб.
+                            Стоимость 34080 руб.
                             <span>Хватит<br>на шесть-восемь месяцев</span>
                         </div>
                         <div class="pricing-item_button">
@@ -1090,38 +1057,39 @@
                 </div>
             </div>
 
-           <script> 
-        const SHOW_INITIAL = 4;
-        const SHOW_MORE = 4;
-        const $button = $('.btn-search-more');
-        const $items = $('.price-disclosure');
-        const $button2 = $('.btn-search-more_mobileclouse');
+            <script>
 
-        $items.hide();
+                const SHOW_INITIAL = 4;
+                const SHOW_MORE = 4;
+                const $button = $('.btn-search-more');
+                const $items = $('.price-disclosure');
+                const $button2 = $('.btn-search-more_mobileclouse');
 
-        showItems(SHOW_INITIAL);
-        $button.click(() => showItems(SHOW_MORE));
+                $items.hide();
 
-        function showItems(count) {
-            const $hidden = $items.filter(':hidden');
-            $hidden.slice(0, count).show();
-            $button.toggle($hidden.length > count);
-        }
-        $button2.click(() => $items.slice(-4).css('display', 'none'));
+                showItems(SHOW_INITIAL);
+                $button.click(() => showItems(SHOW_MORE));
 
-        document.querySelector('.btn-search-more_mobile').addEventListener('click', () => {
-            document.querySelector('.btn-search-more_mobileclouse').classList.add('active');
-            document.querySelector('.btn-search-more_mobile').classList.remove('active');
-        })
+                function showItems(count) {
+                    const $hidden = $items.filter(':hidden');
+                    $hidden.slice(0, count).show();
+                    $button.toggle($hidden.length > count);
+                }
+                $button2.click(() => $items.slice(-4).css('display', 'none'));
 
-        document.querySelector('.btn-search-more_mobileclouse').addEventListener('click', () => {
-            document.querySelector('.btn-search-more_mobileclouse').classList.remove('active');
-            document.querySelector('.btn-search-more_mobile').classList.add('active');
+                document.querySelector('.btn-search-more_mobile').addEventListener('click', () => {
+                    document.querySelector('.btn-search-more_mobileclouse').classList.add('active');
+                    document.querySelector('.btn-search-more_mobile').classList.remove('active');
+                })
 
-        })
+                document.querySelector('.btn-search-more_mobileclouse').addEventListener('click', () => {
+                    document.querySelector('.btn-search-more_mobileclouse').classList.remove('active');
+                    document.querySelector('.btn-search-more_mobile').classList.add('active');
+
+                })
 
 
-           </script>
+            </script>
 
 
             <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small uk-margin-large-top"
@@ -1132,35 +1100,6 @@
                     <div>Если нужно поддержать знания по предмету, то с этим прекрасно справятся репетиторы
                         магистранты - студенты последних курсов ВУЗов.</div>
                 </div>
-                <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1000">
-                    <div class="pricing-item bordercolor13">
-
-                        <div class="pricing-item_icon bordercolor13"><img
-                                src="https://cdn.nyutonika.ru/icons/прайс-8-1новый.svg" alt="">
-                        </div>
-                        <ul class="pricing-header_top pricing-header_top_hit pricing-header_top_hit2">
-                            <li>
-                                Первый
-                            </li>
-                        </ul>
-                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
-                            на 8 занятий</div>
-                        <div class="pricing-item_one color13">
-                            <div><span>590</span>руб.</div>
-                            <div>за одно занятие</div>
-                        </div>
-                        <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 4720 руб.
-                            <span>Хватит<br>на месяц - полтора</span>
-                        </div>
-                        <div class="pricing-item_button">
-                            <a href="" class="uk-button uk-button-primary button-tree button-color-13">
-                                Начать бесплатно</a>
-                        </div>
-
-                    </div>
-                </div>
-                <!--
                 <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1000">
                     <div class="pricing-item bordercolor8">
 
@@ -1175,11 +1114,11 @@
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 8 занятий</div>
                         <div class="pricing-item_one color22">
-                            <div><span>710</span>руб.</div>
+                            <div><span>450</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 5680 руб.
+                            Стоимость 3600 руб.
                             <span>Хватит<br>на месяц - полтора</span>
                         </div>
                         <div class="pricing-item_button">
@@ -1189,7 +1128,6 @@
 
                     </div>
                 </div>
-                -->
                 <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1400">
                     <div class="pricing-item bordercolor9">
 
@@ -1202,13 +1140,13 @@
                             </li>
                         </ul>
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
-                            на 4 занятия</div>
+                            на 64 занятия</div>
                         <div class="pricing-item_one color23">
-                            <div><span>760</span>руб.</div>
+                            <div><span>465</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
-                            Стоимость 3040 руб.
+                            Стоимость 1860 руб.
                             <span>Хватит<br>на 2 -3 недели</span>
                         </div>
                         <div class="pricing-item_button">
@@ -1232,7 +1170,7 @@
                         <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
                             на 1 занятие</div>
                         <div class="pricing-item_one color24">
-                            <div><span>780</span>руб.</div>
+                            <div><span>480</span>руб.</div>
                             <div>за одно занятие</div>
                         </div>
                         <div class="pricing-item_set pricing-item_set_hit">
