Страница свободные заявки -2 (доп карточки)

--- a/шаблон — личный кабинет — свободные заявки — педагог.html
+++ b/шаблон — личный кабинет — свободные заявки — педагог.html
@@ -65,7 +65,8 @@
                     </li>
                     <li class=""><a href="https://stage.nyutonika.ru/cabinet/news">
                             <div class="lk-news-icons"> 3 </div><img title="Новости"
-                                src="https://cdn.nyutonika.ru/icons-lk/applications-lk.svg"><span>Свободные заявки</span>
+                                src="https://cdn.nyutonika.ru/icons-lk/applications-lk.svg"><span>Свободные
+                                заявки</span>
                         </a></li>
                 </ul>
                 <div class="aside-lk_all_contact">
@@ -156,7 +157,34 @@
                                 </div>
                             </div>
                         </li>
-
+                        <li>
+                            <div class="card-lk color-next-class-card color-next-class-card-2 educator">
+                                <div class="card-lk_title">Тестовый ученик 1</div>
+                                <div class="card-lk_content">
+                                    <p><span>Возраст:</span>7 лет</p>
+                                </div>
+                                <div class="buttons-educator uk-padding-remove-vertical">
+                                    <div class="card-lk_button card-lk_button-2">
+                                        <button class="card-lk__button_class" type="submit">Беру
+                                        </button>
+                                    </div>
+                                    
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="card-lk color-next-class-card color-next-class-card-2 educator">
+                                <div class="card-lk_title">Тестовый ученик 1</div>
+                                <div class="card-lk_content">
+                                    <p><span>Возраст:</span>7 лет</p>
+                                </div>
+                                <div class="buttons-educator uk-padding-remove-vertical">
+                                    <div class="slot-info slot-info-2">
+                                        Заявка принята
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                     <ul class="uk-pagination uk-flex-center uk-margin-medium">
                         <li><a href="#"><span uk-pagination-previous></span></a></li>
