Добавление строки к желтом ценнику

--- a/index — копия.html
+++ b/index — копия.html
@@ -971,6 +971,7 @@
 
                                 <span>Удобно<br>
                                     для разовых занятий</span>
+                                <div class="pricing-item_postscript">*Окончательная стоимость зависит от сложности нарушения</div>    
                             </div>
                             <div class="pricing-item_button">
                                 <a href="" class="uk-button uk-button-primary button-tree button-color-3">
