--- a/index — копия.html
+++ b/index — копия.html
@@ -879,7 +879,8 @@
                                 Стоимость 6320 руб.
                                 <div class="pricing-item_one_old"><span>8000&nbsp;</span>руб.</div>
                                 <span>Хватит<br>на месяц - полтора</span>
-                                <div class="pricing-item_postscript">*Окончательная стоимость зависит от сложности нарушения</div>
+                                <div class="pricing-item_postscript">*Окончательная стоимость зависит от сложности
+                                    нарушения</div>
                             </div>
                             <div class="pricing-item_button">
                                 <a href="" class="uk-button uk-button-primary button-tree button-color-5">
@@ -939,8 +940,10 @@
                             </div>
                             <div class="pricing-item_set pricing-item_set_hit">
                                 Стоимость 57920 руб.
+                                <span></span>
                                 <span>Хватит<br>примерно на год</span>
-                                <div class="pricing-item_postscript">*Окончательная стоимость зависит от сложности нарушения</div>
+                                <div class="pricing-item_postscript">*Окончательная стоимость зависит от сложности
+                                    нарушения</div>
                             </div>
                             <div class="pricing-item_button">
                                 <a href="" class="uk-button uk-button-primary button-tree button-color-2">
@@ -971,7 +974,8 @@
 
                                 <span>Удобно<br>
                                     для разовых занятий</span>
-                                <div class="pricing-item_postscript">*Окончательная стоимость зависит от сложности нарушения</div>    
+                                <div class="pricing-item_postscript">*Окончательная стоимость зависит от сложности
+                                    нарушения</div>
                             </div>
                             <div class="pricing-item_button">
                                 <a href="" class="uk-button uk-button-primary button-tree button-color-3">
@@ -1893,7 +1897,23 @@
                 <a href="#" class="scrollup">Наверх</a>
             </div>
         </footer>
+        <div class="footer-buttons">
+            <a class="footer-buttons_t" href="tel:+78003336171">Позвонить
+                <svg width="20" height="20" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M4.91492 0.826936C5.78367 -0.0435488 7.2542 -0.119889 8.10629 0.863245L12.31 5.71534C12.3186 5.72439 12.327 5.73365 12.3352 5.74313C13.106 6.63303 12.9594 7.93617 12.1689 8.7304L10.6061 10.2943C12.0892 12.802 14.1801 14.8958 16.6858 16.3823L18.2509 14.815C19.0412 14.0229 20.3398 13.8748 21.2288 14.6379L26.1288 18.8439C27.1202 19.6955 27.0453 21.1732 26.1737 22.0448L22.6642 25.5603C21.3968 26.8292 19.4743 27.2291 17.8869 26.4584C10.3135 22.7877 4.2014 16.6674 0.541111 9.0892C-0.228797 7.5012 0.170705 5.57881 1.43744 4.31048M1.43744 4.31048L4.91492 0.826936ZM16.5327 16.536C16.5341 16.5345 16.5356 16.533 16.5371 16.5315L16.5327 16.536ZM10.4536 10.4466L10.4581 10.4422C10.4566 10.4437 10.4551 10.4451 10.4536 10.4466ZM11.0624 6.87123C11.0583 6.8667 11.0543 6.86212 11.0503 6.85749L6.82165 1.97666C6.69872 1.83499 6.38186 1.76359 6.11817 2.02785L2.64057 5.51151C1.83784 6.31517 1.6446 7.46939 2.0712 8.34838L2.0719 8.34983C5.56562 15.5832 11.3995 21.4249 18.6284 24.9286C19.5058 25.3548 20.6587 25.1624 21.4611 24.3593L24.9711 20.8432C25.2368 20.5775 25.1649 20.2573 25.0215 20.1339M25.0215 20.1339L20.1215 15.9278C19.9855 15.8111 19.6916 15.7779 19.4544 16.0157L17.7544 17.7181C17.5397 17.9394 17.2589 18.0854 16.9542 18.1339C16.6455 18.183 16.3293 18.1294 16.054 17.9815C16.0505 17.9796 16.0471 17.9777 16.0436 17.9758C16.0398 17.9737 16.036 17.9715 16.0323 17.9694C13.1152 16.2896 10.6954 13.8668 9.01932 10.9476C9.01537 10.9408 9.01153 10.9338 9.00777 10.9269C8.85973 10.6515 8.80612 10.3351 8.85518 10.0263C8.9036 9.72144 9.04942 9.44059 9.27065 9.22567L10.964 7.5312C11.1947 7.29901 11.1714 7.01437 11.0624 6.87123"
+                        fill="white"></path>
+                </svg>
+            </a>
+            <a class="footer-buttons_max" href="">MAX
+                <svg width="20" height="20" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M21.3568 3.63756C20.205 2.47997 18.8331 1.56215 17.3212 0.937635C15.8092 0.313116 14.1873 -0.00560013 12.5502 7.44618e-05C5.69095 7.44618e-05 0.100503 5.56256 0.100503 12.3875C0.100503 14.575 0.678392 16.7 1.75879 18.575L0 25L6.59548 23.275C8.41708 24.2625 10.4648 24.7875 12.5502 24.7875C19.4095 24.7875 25 19.225 25 12.4C25 9.08755 23.706 5.97506 21.3568 3.63756ZM12.5502 22.6875C10.691 22.6875 8.86935 22.1875 7.27387 21.25L6.89698 21.025L2.97739 22.05L4.0201 18.25L3.76884 17.8625C2.73586 16.2212 2.18736 14.3241 2.18593 12.3875C2.18593 6.71255 6.83417 2.08757 12.5377 2.08757C15.3015 2.08757 17.902 3.16257 19.8492 5.11256C20.8134 6.06751 21.5775 7.20338 22.0972 8.45433C22.6169 9.70528 22.8819 11.0464 22.8769 12.4C22.902 18.075 18.2538 22.6875 12.5502 22.6875ZM18.2286 14.9875C17.9146 14.8375 16.3819 14.0875 16.1055 13.975C15.8166 13.875 15.6156 13.825 15.402 14.125C15.1884 14.4375 14.598 15.1375 14.4221 15.3375C14.2462 15.55 14.0578 15.575 13.7437 15.4125C13.4296 15.2625 12.4246 14.925 11.2437 13.875C10.3141 13.05 9.69849 12.0375 9.51005 11.725C9.33417 11.4125 9.48492 11.25 9.64824 11.0875C9.78643 10.95 9.96231 10.725 10.1131 10.55C10.2638 10.375 10.3266 10.2375 10.4271 10.0375C10.5276 9.82504 10.4774 9.65005 10.402 9.50005C10.3266 9.35005 9.69849 7.82505 9.44723 7.20005C9.19598 6.60006 8.93216 6.67505 8.74372 6.66255H8.1407C7.92713 6.66255 7.6005 6.73755 7.31156 7.05005C7.03517 7.36255 6.23116 8.11255 6.23116 9.63755C6.23116 11.1625 7.34925 12.6375 7.5 12.8375C7.65075 13.05 9.69849 16.175 12.8141 17.5125C13.5553 17.8375 14.1332 18.025 14.5854 18.1625C15.3266 18.4 16.005 18.3625 16.5452 18.2875C17.1482 18.2 18.392 17.5375 18.6432 16.8125C18.907 16.0875 18.907 15.475 18.8191 15.3375C18.7312 15.2 18.5427 15.1375 18.2286 14.9875Z"
+                        fill="white"></path>
+                </svg>
 
+            </a>
+        </div>
     </div>
 
     <script src="js/jquery.maskedinput-1.4.1.js" type="text/javascript"></script>
