--- a/index — копия.html
+++ b/index — копия.html
@@ -209,7 +209,7 @@
                                                         <img class="trend-icon" src="svg/telegram.svg" alt="">
                                                     </a>
                                                     <a href="">
-                                                        <img class="trend-icon" src="svg/viber.svg" alt="">
+                                                        <img class="trend-icon" src="https://cdn.nyutonika.ru/icons/max.svg" alt="">
                                                     </a>
                                                 </div>
                                                 <div>
