Кнопки МАХ в подвале

--- a/index — копия.html
+++ b/index — копия.html
@@ -1860,7 +1860,7 @@
                                     <img class="trend-icon" src="svg/telegram.svg" alt="">
                                 </a>
                                 <a href="">
-                                    <img class="trend-icon" src="svg/viber.svg" alt="">
+                                    <img class="trend-icon" src="https://cdn.nyutonika.ru/icons/max.svg" alt="">
                                 </a>
 
                             </div>
@@ -1875,7 +1875,7 @@
                                         <img class="trend-icon" src="svg/vk-logo-of-social-network.svg" alt="">
                                     </a>
                                     <a href="">
-                                        <img class="trend-icon" src="svg/viber.svg" alt="">
+                                        <img class="trend-icon" src="https://cdn.nyutonika.ru/icons/max.svg" alt="">
                                     </a>
                                 </div>
                             </div>
