--- a/страница восстановления пароля — запрос с уведомлением.html
+++ b/страница восстановления пароля — запрос с уведомлением.html
@@ -72,7 +72,7 @@
                                 <li id="notice-email-regpass" class="notice-block-text"><span
                                         uk-icon="icon: warning; ratio: 1.7"></span>
                                     <p>Такой e-mail не зарегистрирован. <a href="">Зарегистрироваться&nbsp;→</a></p>
-                                </li>                                
+                                </li>
                             </ul>
                             <!-- Конец появляющегося блока   -->
                             <div class="uk-margin-small-bottom uk-inline uk-width-1-1">
@@ -98,7 +98,7 @@
                                 <img class="trend-icon" src="https://cdn.nyutonika.ru/svg/telegram.svg" alt="">
                             </a>
                             <a href="">
-                                <img class="trend-icon" src="https://cdn.nyutonika.ru/svg/viber.svg" alt="">
+                                <img class="trend-icon" src="https://cdn.nyutonika.ru/icons/max.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                                     alt="">
                             </a>
                             <a href="">
-                                <img class="trend-icon" src="https://cdn.nyutonika.ru/svg/viber.svg" alt="">
+                                <img class="trend-icon" src="https://cdn.nyutonika.ru/icons/max.svg" alt="">
                             </a>
                         </div>
                     </div>
@@ -124,4 +124,5 @@
     </div>
     <script src="https://cdn.nyutonika.ru/js/jquery.maskedinput-1.4.1.js" type="text/javascript"></script>
 </body>
+
 </html>
